[BUGFIX] Fix tty overflow

--- a/server/html/client/panels/tty/tty_mobile.css
+++ b/server/html/client/panels/tty/tty_mobile.css
@@ -8,7 +8,6 @@
 	overflow: auto;
 	font-size: 20px;
 	word-wrap:break-word;
-	padding-top: 5px;
 }
 #cursor {
 	height: 24px;
